# ingestion-engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  SELFHOST.md  docker-compose.yml  fly.toml  load_test.sh
config/: default.toml
crates/api/: Cargo.toml
crates/api/src/: extractors.rs  lib.rs  response.rs  state.rs
crates/api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/api/src/routes/: health.rs  ingest.rs  mod.rs
crates/clickhouse/: Cargo.toml
crates/clickhouse/src/: client.rs  config.rs  health.rs  insert.rs  lib.rs  ops.rs  query.rs  schema.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  error.rs  events.rs  lib.rs  limits.rs  retention.rs  schema.rs  sdk_event.rs  session.rs  tenant.rs
crates/redpanda/: Cargo.toml
crates/redpanda/src/: batch.rs  config.rs  consumer.rs  health.rs  lib.rs  partitioner.rs  producer.rs  topics.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: health.rs  lib.rs  metrics.rs  tracing_setup.rs
crates/worker/: Cargo.toml
crates/worker/src/: backfill.rs  compression.rs  consumer.rs  enrichment.rs  lib.rs  notifications.rs  retention.rs  scheduler.rs
docs/: CLICKHOUSE-SELF-HOST.md
src/: main.rs
tests/: Cargo.toml
tests/src/: containers.rs  fixtures.rs  lib.rs  mocks.rs  setup.rs
tests/tests/: health.rs  ingest_e2e.rs  ingest_errors.rs
