[package]
name = "api"
version = "1.0.0"
edition = "2021"
description = "HTTP API layer for the ingestion engine"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
moka = { workspace = true }

engine-core = { workspace = true }
redpanda = { workspace = true }
clickhouse-client = { workspace = true }
telemetry = { workspace = true }
