[package]
name = "clickhouse-client"
version = "1.0.0"
edition = "2021"
description = "ClickHouse client for the ingestion engine"

[dependencies]
clickhouse = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

engine-core = { workspace = true }
telemetry = { workspace = true }
