[package]
name = "engine-core"
version = "1.0.0"
edition = "2021"
description = "Core types, schemas, and validation for the ingestion engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
