[package]
name = "telemetry"
version = "1.0.0"
edition = "2021"
description = "Internal telemetry and tracing for the ingestion engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
