[package]
name = "worker"
version = "1.0.0"
edition = "2021"
description = "Background workers for the ingestion engine"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

engine-core = { workspace = true }
clickhouse-client = { workspace = true }
redpanda = { workspace = true }
telemetry = { workspace = true }
