[package]
name = "worker"
version = "1.0.0"
edition = "2021"
description = "Background workers for the ingestion engine"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clickhouse = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

woothee = "0.13"

engine-core = { workspace = true }
clickhouse-client = { workspace = true }
redpanda = { workspace = true }
telemetry = { workspace = true }
